# cmake_demo

./: CMakeLists.txt  Dockerfile  README.md
extlib/: CMakeLists.txt  extlib-config.cmake.in
extlib/libattrapi/: Attr_API.c  Attr_API.h  CMakeLists.txt
extlib/libl5_api/: qos_client.h
module_mock/test/: CMakeLists.txt
module_xxx/: CMakeLists.txt  main.cc
module_yyy/: CMakeLists.txt  main.cc
proto/: CMakeLists.txt  demo.proto
public/include/: public.h
public/src/: CMakeLists.txt  public.cc
public/test/: CMakeLists.txt  test_public.cc
