CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(demo_proj)

SET(CMAKE_C_FLAGS "$ENV{CFLAGS} -O0 -Wall -g")
SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O0 -Wall -g")
SET(CMAKE_C_FLAGS_DEBUG "$ENV{CFLAGS} -O0 -Wall -g")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g")
SET(CMAKE_C_FLAGS_RELEASE "$ENV{CFLAGS} -O2 -Wall")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2 -Wall")

OPTION(USE_32BIT "Compile for 32Bit" OFF)
if(USE_32BIT)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32")
    SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -m32")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -m32")
    SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -m32")
    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -m32")
else()
endif(USE_32BIT)

ADD_SUBDIRECTORY(extlib)
ADD_SUBDIRECTORY(public)
ADD_SUBDIRECTORY(proto)
ADD_SUBDIRECTORY(module_xxx)
ADD_SUBDIRECTORY(module_yyy)
